welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: type mismatch;
 found   : String("Direction.EST")
 required: plm.universe.Direction
  setDirection("Direction.EST")
               ^DwarfCode:17: error: not found: value Direction
  setDirection(Direction.WEST)
               ^DwarfCode:22: error: not found: value Direction
  setDirection(Direction.EAST)
               ^